docs(02-01): complete version targets and structural review plan
Tasks completed: 2/2
- Update version targets to Java 25 LTS and Spring Boot 4.0.x
- Fix outdated version refs in titles/dirs, remove enable-preview, structural review

SUMMARY: .planning/phases/02-java-course-audit/02-01-SUMMARY.md

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>